# Planszowker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Questions_to_be_asked.txt  README.md  TODO.txt  vcpkg.json
FunctionalTests/: AssetsTransferClient.cpp  CMakeLists.txt  LuaTest.cpp  ZipiosTest.cpp
PlanszowkerClient/: CMakeLists.txt  main.cpp  sfgui_test.cpp
PlanszowkerClient/sources/Config/: Config.h.in
PlanszowkerClient/sources/Core/: Core.cpp
PlanszowkerClient/sources/States/: GameState.cpp  IStates.h  MainMenuState.hpp  StatesHandler.cpp  StatesHandler.h
PlanszowkerClient/sources/Util/: Window.cpp
PlanszowkerServer/: CMakeLists.txt  config.plameta  main.cpp  testingLUA.cpp  testingZipios.cpp
PlanszowkerServer/core/: lua-state-machine.lua
PlanszowkerServer/lua-scripts/core/: lua-game-objects.lua  lua-reply.lua
PlanszowkerServer/lua-scripts/games/: DiceRoller.lua  DiceRoller.plagame
PlanszowkerServer/lua-scripts/games/DiceRoller/: BoardDescription.json  DiceRoller-init.lua  DiceRoller-states.lua  DiceRoller.lua  test.json
PlanszowkerServer/lua-scripts/games/DiceRoller/DiceRoller/: DiceRoller.lua
PlanszowkerServer/scripts/core/: lua-action-request.lua  lua-helper.lua  lua-reply.lua  lua-state-machine.lua
PlanszowkerServer/scripts/core/objects/: destination-point.lua  entity-test.lua
PlanszowkerServer/scripts/games/DiceRoller/: plagame.plameta
Planszowker_server/: CMakeLists.txt
Planszowker_server/cmake/: build_number.cmake
Planszowker_server/inc/: Client.h  Config.h.in  NetworkHandler.h  build_number.h
Planszowker_server/src/: Client.cpp  Server.cpp  main.cpp
common/GameUtils/GameWindow/: CMakeLists.txt
common/Games/: CMakeLists.txt  GameCreator.cpp  GraphicalView.cpp
common/Games/DiceRoller/: CMakeLists.txt
common/Games/DiceRoller/Client/: CMakeLists.txt  Client.cpp  ConsoleView.cpp  Controller.cpp  DiceRollerConsoleView.cpp  DiceRollerController.cpp  GraphicalView.cpp  ViewLogic.cpp  dummy.cpp
common/Games/DiceRoller/Server/: CMakeLists.txt  DiceRollerServerLogic.cpp  Logic.cpp  ServerHandler.cpp  ServerLogic.cpp
common/Games/headers/Games/: Characters.h  Common.h  CommonHeader.h  ConsoleCharacters.h  ConsoleView.h  Controller.h  GameCreator.h  GenericView.h  GraphicalView.h  Model.h  NetworkObjects.h  Objects.h  ServerHandler.h  ServerLogic.h  ViewLogic.h  ViewObject.h
common/Network/: CMakeLists.txt
common/Network/NetworkHandler/: CMakeLists.txt  ClientPacketHandler.cpp  NetworkHandler.cpp  ServerPacketHandler.cpp
common/Network/NetworkQuery/: CMakeLists.txt  NetworkQuery.cpp
common/Utils/: CMakeLists.txt
common/Utils/ClientInfo/: CMakeLists.txt  ClientInfo.cpp
common/Utils/CompilerUtils/: CMakeLists.txt
common/Utils/ErrorHandler/: CMakeLists.txt  ErrorLogger.cpp  ExceptionThrower.cpp
common/Utils/ErrorLogger/: CMakeLists.txt  ErrorLogger.cpp
common/Utils/Logger/: CMakeLists.txt  Logger.cpp
common/Utils/Rng/: CMakeLists.txt
common/Utils/TimeMeasurement/: CMakeLists.txt  TimeLogger.cpp
functional_tests/: AssetsTransferClient.cpp  AssetsTransferServer.cpp  CMakeLists.txt  ImGuiTest.cpp  ZipLibTest.cpp
libs/Games/: BoardParser.cpp  CMakeLists.txt  CommObjects.cpp  GamesMetaInfo.cpp  GraphicalView.cpp  Objects.cpp
libs/Games/Callbacks/: GameCallbacks.cpp  GameChoosingCallbacks.cpp  GameLobbyCallbacks.cpp  ICallbacks.cpp
libs/Games/DiceRoller/: CMakeLists.txt
libs/Games/DiceRoller/Client/: CMakeLists.txt  ConsoleView.cpp  Controller.cpp
libs/Games/Objects/: ActionButton.cpp  DestinationPoint.cpp  Entity.cpp  Tile.cpp
libs/Games/States/: GameChoosingState.cpp  GameLobbyState.cpp  GameState.cpp
libs/Games/headers/Games/: BoardParser.h  CommObjects.h  Controller.h  GameInstance.h  GameWindow.h  GamesLobby.h  GamesMetaInfo.h  GenericView.h  GraphicalView.h  Objects.h  ViewLogic.h
libs/GamesClient/: CMakeLists.txt  ConsoleView.cpp  Controller.cpp  FontManager.cpp  GraphicalView.cpp  SharedObjects.cpp  ViewLogic.cpp
libs/GamesClient/headers/GamesClient/: ConsoleView.h  Controller.h  FontManager.h  GraphicalView.h  SharedObjects.h  ViewLogic.h
libs/GamesServer/: AssetsTransmitter.cpp  AssetsUploader.cpp  CMakeLists.txt  GamesHandler.cpp  Logic.cpp  ServerHandler.cpp
libs/GamesServer/headers/GamesServer/: AssetsTransmitter.h  AssetsUploader.h  GamesHandler.h  Logic.h  ServerHandler.h
libs/ServerSupervisor/: CMakeLists.txt  Command.cpp  ServerSupervisor.cpp
libs/ServerSupervisor/headers/ServerSupervisor/: Command.h  ServerSupervisor.h
libs/Utils/AssetsManager/: AssetsReceiver.cpp  AssetsTransmitter.cpp  CMakeLists.txt
libs/Utils/CompilerUtils/: CMakeLists.txt
libs/Utils/PlametaParser/: CMakeLists.txt  Entry.cpp  Parser.cpp
libs/Utils/ThreadSafeQueue/: CMakeLists.txt  ThreadSafeQueue.cpp
libs/Utils/TickThread/: CMakeLists.txt  TickThread.cpp
planszowker_client/: CMakeLists.txt  main.cpp
planszowker_client/sources/: main.cpp
planszowker_client/sources/Resources/: ResourceHolder.hpp
planszowker_client/sources/States/: MainMenuState.cpp
planszowker_server/: CMakeLists.txt  NetworkHandler.cpp  main.cpp
planszowker_server/headers/planszowker_server/: NetworkHandler.h  Server.h
planszowker_server/inc/: NetworkHandler.h  Server.h
planszowker_server/scripts/core/: lua-action-request.lua  lua-game-objects.lua  lua-reply.lua
planszowker_server/scripts/core/debug/: inspect.lua
planszowker_server/scripts/core/objects/: action-button-test.lua  action-button.lua  entity.lua  grid.lua  tile.lua
planszowker_server/scripts/core/tests/: destination-point-test.lua  grid-test.lua
planszowker_server/scripts/games/DiceRoller/: .plameta
planszowker_server/scripts/games/Dummy/: .plameta
planszowker_server/scripts/games/Kingdomino/: .plameta
planszowker_server/src/: NetworkHandler.cpp  main.cpp
tests/: CMakeLists.txt
tests/libs/Utils/AssetsManager/: AssetsReceiverTest.cpp  CMakeLists.txt
tests/libs/Utils/TickThread/: CMakeLists.txt  TickThreadTest.cpp
tests/mocks/Utils/: CMakeLists.txt
tests/mocks/Utils/AssetsManager/: AssetsReceiverMock.h  CMakeLists.txt
(+124 files in other folders)
